cmake_minimum_required(VERSION 3.15)
project(leetcode_problems C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(00001_two_sum)
add_subdirectory(00002_add_two_numbers)
add_subdirectory(00003_longest_substring_without_repeating_characters)
add_subdirectory(00005_longest_palindromic_substring)
add_subdirectory(00011_container_with_most_water)
add_subdirectory(00012_integer_to_roman)
add_subdirectory(00013_roman_to_integer)
add_subdirectory(00026_remove_duplicates_from_sorted_array)
add_subdirectory(00035_search_insert_position)
add_subdirectory(00038_count_and_say)
add_subdirectory(00412_fizz_buzz)
add_subdirectory(00537_complex_number_multiplication)
add_subdirectory(01002_find_common_characters)
add_subdirectory(01104_path_in_zigzag_labelled_binary_tree)
